update repository link

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Simone Asnaghi
 title: Electronics Engineer
 email: 
 
-website: www.github.com/Simone-Asnaghi/resume
+website: www.github.com/simoasnaghi/resume
 
 # Dark Mode (true/false/never)
 darkmode: false
