--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ content:
     content:
       - layout: left
         title: T.P.L. Informatica S.R.L.
-        link: tplinformatica.com
+        link: www.tplinformatica.com
         # link_text: boringcompany.com
         sub_title: I.A. Developer and Robotics Engineer.
         caption: September 2019 - December 2019
