--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,14 @@ github_username:  simoasnaghi
 facebook_username: simone.asnaghi
 instagram_username: simone_asnaghi
 linkedin_username: simone-asnaghi-45844a185
-gitlab-username: simoneasnaghi
 
 additional_links:
 - title: Telegram profile
   icon: fab fa-telegram-plane
   url: t.me/Simone_Asnaghi
+- title: Gitlab profile
+  icon: fab fa-gitlab
+  url: https://gitlab.com/simoneasnaghi
 
 
 # About Section
